<resources>
    <string name="app_name">Food Order UI</string>
    <string name="food_app">Food App</string>
    <string name="todo">TODO</string>
    <string name="foodator">Foodator</string>
    <string name="get_start">Get Start</string>
    <string name="order_amp_eat"><![CDATA[Order & Eat]]></string>
    <string name="hi_user">Hi User</string>
    <string name="july_1_aug_10">July 1 - Aug 10</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="find_your_food">Find Your Food</string>
    <string name="order_now">Order Now</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="Dollar">%1$s %2$d</string>
    <string name="Forgot">
        <u>Forgot Password?</u>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="listOfFood">
        <item>pizza</item>
        <item>burger</item>
        <item>hotdog</item>
        <item>drinks</item>
        <item>donate</item>
    </string-array>
</resources>