<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.IntroActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/img" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/imageView7" android:contentDescription="@string/todo"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="294dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/burger" android:id="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintVertical_bias="0.342" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/foodator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView7" app:layout_constraintVertical_bias="0.32"
            android:fontFamily="@font/roboto_medium" android:textSize="60sp"
            android:textStyle="bold" android:textColor="@color/LogoText" app:layout_constraintHorizontal_bias="0.496"/>
    <TextView
            android:text="@string/food_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp" android:textStyle="bold"
            android:textColor="@color/LogoText" android:fontFamily="@font/roboto_medium"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.091"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            android:background="@drawable/orange_button" android:id="@+id/ButtonStart"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:text="@string/get_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="25sp" android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>