<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="500dp"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="900dp">

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView11"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:paddingStart="22dp" android:paddingEnd="22dp"
                        android:clipToPadding="false" android:id="@+id/recyclerView2"
                        app:layout_constraintHorizontal_bias="1.0"/>
                <TextView
                        android:text="@string/popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
                        android:textSize="18sp" android:textStyle="bold"
                        android:textColor="@color/black" android:fontFamily="@font/roboto"
                        android:layout_marginTop="16dp"/>
                <TextView
                        android:text="@string/hi_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                        android:textSize="20sp" android:textStyle="bold" android:textColor="@color/TextColor"
                        android:fontFamily="@font/roboto_medium"
                />
                <TextView
                        android:text="@string/order_amp_eat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="@id/textView4"
                        android:textSize="20sp" android:textColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"/>

                <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_user__1_"
                        android:id="@+id/ProfileImage"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@android:color/transparent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/textView4"
                        app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editTextTextPersonName"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                        android:hint="@string/find_your_food" android:drawableStart="@drawable/ic_search"
                        android:background="@drawable/search_background"
                        android:paddingStart="20dp" android:textSize="14sp" android:fontFamily="@font/roboto"
                        android:drawablePadding="10dp" app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.0"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="341dp"
                        android:layout_height="122dp"
                        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                        android:layout_marginTop="32dp" android:background="@drawable/light_orange_back"
                        android:id="@+id/constraintLayout">
                    <ImageView
                            android:layout_width="208dp"
                            android:layout_height="141dp" app:srcCompat="@drawable/ic_delivery"
                            android:id="@+id/imageView2" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/todo"/>
                    <TextView
                            android:text="@string/free_delivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView7"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="@+id/imageView2" android:textSize="20sp"
                            android:textStyle="bold" android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium" android:layout_marginTop="16dp"/>
                    <TextView
                            android:text="@string/july_1_aug_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView8"
                            app:layout_constraintTop_toBottomOf="@+id/textView7"
                            app:layout_constraintStart_toStartOf="@+id/textView7"
                            app:layout_constraintEnd_toEndOf="@+id/textView7"
                            android:textSize="18sp"
                            android:textStyle="bold" android:textColor="@color/black"
                            android:fontFamily="@font/roboto" app:layout_constraintHorizontal_bias="0.0"
                            android:layout_marginTop="8dp"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/orange_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/textView8"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toBottomOf="@+id/textView7">


                        <TextView
                                android:text="@string/order_now"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView9"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp" android:textColor="@color/white"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                        android:text="@string/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp" android:textSize="18sp" android:textStyle="bold"
                        android:textColor="@color/black" android:fontFamily="@font/roboto"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView10"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp" android:paddingStart="22dp" android:paddingEnd="22dp"
                        android:clipToPadding="false" android:id="@+id/recyclerView"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.bottomappbar.BottomAppBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:backgroundTint="@color/white"
                android:id="@+id/app_bar"
                app:fabCradleMargin="8dp">
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ff5e00"
                    android:elevation="3dp"
                    app:layout_anchor="@id/app_bar"
                    app:shapeAppearanceOverlay="@style/FabDiamondOverlay"
                    app:icon="@drawable/ic_shopping_cart"
                    app:maxImageSize="30dp"
                    app:tint="@color/white"
                    android:contentDescription="@string/todo"/>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>